--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
             <button type="submit">Send</button>
         </form>
     </div>
-    <script src="script.js" type="text/javascript"/>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
